vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.2 (64-bit)
  **** SW Build 2258646 on Thu Jun 14 20:02:38 MDT 2018
  **** IP Build 2256618 on Thu Jun 14 22:10:49 MDT 2018
    ** Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.

source /data/Xilinx/Vivado/Vivado/2018.2/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/data/Xilinx/Vivado/Vivado/2018.2/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'laikas' on host 'correlator2.fnal.gov' (Linux_x86_64 version 3.10.0-957.21.3.el7.x86_64) on Thu Jan 27 21:10:45 CST 2022
INFO: [HLS 200-10] On os "Scientific Linux release 7.9 (Nitrogen)"
INFO: [HLS 200-10] In directory '/data1/laikas/hls4ml-tutorial/final_deepcalo/12-21-2021/deepcalo-12-02-2021-image-only/deepcalo-with-hls-4-ml-v0.1_2021_11/demos/atlas_specific_usecases/train_recommended_electron_models_for_hls4ml/Deepcalo_model'
INFO: [HLS 200-10] Opening project '/data1/laikas/hls4ml-tutorial/final_deepcalo/12-21-2021/deepcalo-12-02-2021-image-only/deepcalo-with-hls-4-ml-v0.1_2021_11/demos/atlas_specific_usecases/train_recommended_electron_models_for_hls4ml/Deepcalo_model/myproject_prj'.
INFO: [HLS 200-10] Adding design file 'firmware/myproject.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'myproject_test.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'firmware/weights' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_data' to the project
INFO: [HLS 200-10] Opening solution '/data1/laikas/hls4ml-tutorial/final_deepcalo/12-21-2021/deepcalo-12-02-2021-image-only/deepcalo-with-hls-4-ml-v0.1_2021_11/demos/atlas_specific_usecases/train_recommended_electron_models_for_hls4ml/Deepcalo_model/myproject_prj/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [HLS 200-10] Setting target device to 'xcvu9p-flgb2104-2-i'
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 60.
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 60.
***** C SIMULATION *****
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../myproject_test.cpp in debug mode
../../../../myproject_test.cpp: In function ‘int main(int, char**)’:
../../../../myproject_test.cpp:95:128: error: cannot convert ‘model_weightdefault_t {aka ap_fixed<16, 6>}’ to ‘model_weightdefault_t* {aka ap_fixed<16, 6>*}’ for argument ‘5’ to ‘void myproject(hls::stream<nnet::array<ap_fixed<16, 6>, 4u> >&, hls::stream<nnet::array<ap_fixed<16, 6>, 1u> >&, short unsigned int&, short unsigned int&, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*)’
       myproject(em_barrel,layer55_out,size_in1,size_out1, w27[73728],w31[147456],w36[294912],w40[589824],w45[589824],w49[65536]);
                                                                                                                                ^
../../../../myproject_test.cpp:133:126: error: cannot convert ‘model_weightdefault_t {aka ap_fixed<16, 6>}’ to ‘model_weightdefault_t* {aka ap_fixed<16, 6>*}’ for argument ‘5’ to ‘void myproject(hls::stream<nnet::array<ap_fixed<16, 6>, 4u> >&, hls::stream<nnet::array<ap_fixed<16, 6>, 1u> >&, short unsigned int&, short unsigned int&, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*)’
     myproject(em_barrel,layer55_out,size_in1,size_out1, w27[73728],w31[147456],w36[294912],w40[589824],w45[589824],w49[65536]);
                                                                                                                              ^
make: *** [obj/myproject_test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
4
    while executing
"source [lindex $::argv 1] "
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 { source [lindex $::argv 1] } "

INFO: [Common 17-206] Exiting vivado_hls at Thu Jan 27 21:10:47 2022...
